--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ dmypy.json
 2022/selenium_/chromedriver.exe
 
 2021/text/mp4_dosyalari.txt
+2021/text/pdf_dosyalari.txt
+2021/text/txt_dosyalari.txt
