--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ dmypy.json
 2021/text/mp4_dosyalari.txt
 2021/text/pdf_dosyalari.txt
 2021/text/txt_dosyalari.txt
+
+2022/Django/mysite/mysite/settings.py
